Fixed multiple scrollbars on containers that made mobile unusable

--- a/src/styles/components/About.css
+++ b/src/styles/components/About.css
@@ -2,7 +2,6 @@
     width: 100%;
     display: flex;
     height: 400px;
-    margin-bottom: 200px;
 }
 
 .a-container{
@@ -59,37 +58,37 @@
 }
 
 @media (max-width: 808px) {
+    .about{
+        overflow-y: hidden !important;
+        height: auto !important;
+    }
     .a-container{
         flex-wrap:wrap-reverse !important;
-        margin-top: 50px !important;
+        height: auto;
+        overflow-y: hidden !important;
     }
     .a-blob-container{
         width: 100% !important;
-        position: relative;
-        margin-bottom: -180px !important;
     }
     .a-text-container{
         width: 100% !important;
-        position: relative;
-        padding-top: 200px !important;
-        z-index: -1 !important;
+        overflow-y: hidden !important;
     }
     .a-blob{
-        height: 80% !important;
+        height: 300px  !important;
+        
     }
-    .a-text, .a-sub-title, .a-title{
+    /* .a-text, .a-sub-title, .a-title{
         z-index: 2 !important;
-    }
+    } */
 }
 
 @media (max-width: 408px) {
     .a-container{
         width: 99% !important;
     }
-    .a-blob-container{
-        margin-bottom: -250px !important;
-    }
+
     .a-blob{
-        height: 60% !important;
+        height: 240px !important;
     }
 }
